--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "16.6.1",
     "react-native": "0.57.5",
     "react-native-keyboard-aware-scroll-view": "^0.7.4",
-    "react-native-password-strength-checker": "^1.0.13"
+    "react-native-password-strength-checker": "^1.0.13",
+    "react-navigation": "^1.0.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
