--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "native-base": "^2.8.1",
     "react": "16.6.1",
     "react-native": "0.57.5",
+    "react-native-gesture-handler": "^1.0.10",
     "react-native-keyboard-aware-scroll-view": "^0.7.4",
     "react-native-password-strength-checker": "^1.0.13",
-    "react-navigation": "^1.0.0"
+    "react-native-vector-icons": "^6.1.0",
+    "react-navigation": "^3.0.5"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
