--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "native-base": "^2.8.1",
     "react": "16.6.1",
     "react-native": "0.57.5",
+    "react-native-chart-kit": "^1.2.1",
     "react-native-gesture-handler": "^1.0.10",
     "react-native-keyboard-aware-scroll-view": "^0.7.4",
     "react-native-password-strength-checker": "^1.0.13",
